--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html />
+<!DOCTYPE html/>
 
 <html>
   <head>
@@ -8,6 +8,13 @@
   </head>
 
   <body>
-    <h1>Hello!</h1>
+    <div class="">
+      <h1>Hello I'm Maphangwa Tshifhiwa.</h1>
+      <h3>Software Developer</h3>
+    </div>
+
+    <div class="">
+      <
+    </div>
   </body>
 </html>
