--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     </div>
 
     <div class="">
-      <
+      <h3 class="">Projects</h3>
+    </div>
+
+    <div class="">
+      <h3 class="">Contacts</h3>
     </div>
   </body>
 </html>
