--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 
 <html>
   <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="keywords" content="hire, software, developer, engineer">    
+    <meta name="description" content="Free Web tutorials">
 
     <title>Maphangwa Tshifhiwa</title>
   </head>
