--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <meta name="keywords" content="hire, software, developer, engineer">    
     <meta name="description" content="Free Web tutorials">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    
     <title>Maphangwa Tshifhiwa</title>
   </head>
 
-  <body>
+  <body class="">
     <div class="">
       <h1>Hello I'm Maphangwa Tshifhiwa.</h1>
       <h3>Software Developer</h3>
@@ -24,5 +27,8 @@
     <div class="">
       <h3 class="">Contacts</h3>
     </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   </body>
 </html>
