--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       <h3 class="">Contacts</h3>
     </div>
     
+    <div class="">
+      <h3 class="">Socials</h3>
+    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
   </body>
