--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
       <h3 class="">Socials</h3>
 
       <div class="">
-          <img  src="" alt"X" />
-          <img  src="" alt"YouTube" />
-          <img  src="" alt"GitHub" />
+          <a href=""> <img  src="img/x.png" alt"X" /> </a>
+          <a href=""> <img  src="img/youtube.png" alt"YouTube" /> </a>
+          <a href=""> <img  src="img/github.png" alt"GitHub" /> </a>
       </div>
     </div>
     
