--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
       <h3 class="">Socials</h3>
 
       <div class="">
-          <a href=""> <img  src="img/x.png" alt"X" /> </a>
-          <a href=""> <img  src="img/youtube.png" alt"YouTube" /> </a>
-          <a href=""> <img  src="img/github.png" alt"GitHub" /> </a>
+          <a href="https://x.com/t_maphangwa"> <img  src="img/x.png" alt="X" /> </a>
+          <a href="https://www.youtube.com/channel/UC3Ce0RRtwhq6o5f4DR0rVbQ"> <img  src="img/youtube.png" alt="YouTube" /> </a>
+          <a href="https://github.com/tmaphangwa"> <img  src="img/github.png" alt="GitHub" /> </a>
       </div>
     </div>
     
