--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
     </div>
 
     <div class="">
-      <h3 class="">Projects</h3>
+      <h3 class="">What I Do</h3>
+    </div>
+
+    <div class="">
+      <h3 class="">Previous Projects</h3>
     </div>
 
     <div class="">
@@ -31,7 +35,7 @@
           <span class=""></span>
           <span class="">Email:</span>
           <span class=""></span>
-          <span class=""></span>
+          <span class="">tmaphangwa04@gmail.com</span>
       </p>
       
       <p class="">
@@ -44,8 +48,8 @@
       <p class="">
           <span class=""></span>
           <span class="">Address:</span>
-          <span class=""></span>
-          <span class=""></span>
+          <span class="glyphicon glyphicon-align-left"></span>
+          <span class="">South Africa . Midrand</span>
       </p>
     </div>
     
