--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <p class="">
           <span class=""></span>
           <span class="">Address:</span>
-          <span class="glyphicon glyphicon-align-left"></span>
+          <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
           <span class="">South Africa . Midrand</span>
       </p>
     </div>
