--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
       <p class="">
           <span class=""></span>
           <span class="">Email:</span>
-          <span class=""></span>
+          <span class="bi bi-envelope-at-fill"></span>
           <span class="">tmaphangwa04@gmail.com</span>
       </p>
       
       <p class="">
           <span class=""></span>
           <span class="">Phone:</span>
-          <span class=""></span>
+          <span class="bi bi-telephone-x-fill"></span>
           <span class="">+27 67 797 8053</span>
       </p>
       
       <p class="">
           <span class=""></span>
           <span class="">Address:</span>
-          <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
+          <span class="bi bi-geo-alt-fill" aria-hidden="true"></span>
           <span class="">South Africa . Midrand</span>
       </p>
     </div>
