--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
       <h3>Software Developer</h3>
     </div>
 
+    <div class="description">
+    </div>
+
     <div class="">
       <h3 class="">What I Do</h3>
     </div>
