--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Maphangwa Tshifhiwa</title>
   </head>
 
-  <body class="">
+  <body class="container">
     <div class="">
       <h1>Hello I'm Maphangwa Tshifhiwa.</h1>
       <h3>Software Developer</h3>
