--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h3 class="">Previous Projects</h3>
     </div>
 
-    <div class="">
+    <div class="text-center">
       <h3 class="">Contacts</h3>
 
       <div class="">
