--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Maphangwa Tshifhiwa</title>
   </head>
 
-  <body class="container">
+  <body class="container text-center">
     <div class="">
       <h1>Hello I'm Maphangwa Tshifhiwa.</h1>
       <h3>Software Developer</h3>
@@ -26,13 +26,48 @@
 
     <div class="">
       <h3 class="">What I Do</h3>
+
+      <div class="m-3">
+        <h4 class="">Solution Achitect</h4>
+        <p class="">Provide Solution that solve business and society problems</p>
+      </div>
+
+      <div class="m-3">
+        <h4 class="">Project Planning</h4>
+        <p class="">Research project and deliver document presantations for requirement elicitation</p>
+      </div>
+
+      <div class="m-3">
+        <h4 class="">Software Development</h4>
+        <p class="">I build software solutions that solve real-world problems.</p>
+      </div>
+
+      <div class="m-3">
+        <h4 class="">business Development</h4>
+        <p class="">I help entrepreneur and businesses to set their self to success.</p>
+      </div>
     </div>
 
     <div class="">
       <h3 class="">Previous Projects</h3>
+
+      <div class="m-3">
+        <h4 class="">Customer Relation Management System</h4>
+        <p class="">Check out <a href="">BusinessPro</a> System, it help Businesses to enteract with Customers easly.</p>
+      </div>
+
+      <div class="m-3">
+        <h4 class="">Health Care management System</h4>
+        <p class="">Check out <a href="">BusinessPro</a> System, it help Businesses to enteract with Customers easly.</p>
+      </div>
+
+      <div class="m-3">
+        <h4 class="">Company Website Development</h4>
+        <p class="">I've bulit website for companies like <a href="">Sofket</a>, <a href="">Republic44</a>, etc.</p>
+      </div>
     </div>
 
-    <div class="text-center">
+    <div class="">
       <h3 class="">Contacts</h3>
 
       <div class="m-3">
@@ -51,7 +86,7 @@
       </div>
     </div>
     
-    <div class="text-center">
+    <div class="">
       <h3 class="">Socials</h3>
 
       <div class="">
