--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="keywords" content="hire, software, developer, engineer">    
-    <meta name="description" content="Free Web tutorials">
+    <meta name="description" content="Hello! I'm Maphangwa Tshifhiwa based in South Africa. I'm a software developer">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
@@ -63,7 +63,27 @@
 
       <div class="m-3">
         <h4 class="">Company Website Development</h4>
-        <p class="">I've bulit website for companies like <a href="">Sofket</a>, <a href="">Republic44</a>, etc.</p>
+        <p class="">I've bulit website for companies like <a href="https://sofket.co.za">Sofket</a>, <a href="https://republic44.com">Republic44</a>, etc.</p>
+      </div>
+
+      <div class="m-3">
+        <h4 class="">API Development and Integration</h4>
+        <p class="">I've bulit website for companies like <a href="https://sofket.co.za">Sofket</a>, <a href="https://republic44.com">Republic44</a>, etc.</p>
+      </div>
+    </div>
+
+    <div class="">
+      <h3 class="">Technologies</h3>
+
+      <div class="m-3">
+        <span class="badge bg-primary">C#</span>
+        <span class="badge bg-secondary">PHP</span>
+        <span class="badge bg-success">Python</span>
+        <span class="badge bg-warning text-dark">JavaScript</span>
+        <span class="badge bg-info text-dark">ReactJS</span>
+        <span class="badge bg-dark text-light">HTML & CSS</span>
+        <span class="badge bg-danger">GitHub</span>
+        <span class="badge bg-danger">Docker</span>
       </div>
     </div>
 
@@ -82,7 +102,7 @@
       
       <div class="m-3">
           <span class="bi bi-geo-alt-fill" aria-hidden="true"></span> 
-          <a href="maps:?q=midrand, south africa" class=""> South Africa . Midrand</a> 
+          <a href="https://www.google.com/maps/place/Ivory+Park,+Midrand" class=""> South Africa . Midrand</a> 
       </div>
     </div>
     
