--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
     <div class="">
       <h1>Hello I'm Maphangwa Tshifhiwa.</h1>
       <h3>Software Developer</h3>
+      <p class="">Based in South Africa, I build software solutions that solve real-world problems. I am a 
+        software developer with a passion for creating innovative solutions that make a difference 
+        in people's lives. With a strong background in software development, I specialize in building scalable and 
+        efficient applications that meet the needs of businesses and individuals alike. I am always eager 
+        to learn new technologies and improve my skills, and I thrive in collaborative 
+        environments where I can work with others to create exceptional software. Whether it's developing a web 
+        application, designing a mobile app, or building a complex backend system, I am dedicated to delivering 
+        high-quality solutions that exceed expectations.</p>
     </div>
 
     <div class="description">
