technology images added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="index.css">
     
     <title>Maphangwa Tshifhiwa</title>
   </head>
@@ -76,22 +77,30 @@
 
       <div class="m-3">
         <h4 class="">API Development and Integration</h4>
-        <p class="">I've bulit website for companies like <a href="https://sofket.co.za">Sofket</a>, <a href="https://republic44.com">Republic44</a>, etc.</p>
+        <p class="">I've bulit and integrate API web services.</p>
       </div>
     </div>
 
-    <div class="">
+    <div class="technology">
       <h3 class="">Technologies</h3>
 
-      <div class="m-3">
-        <span class="badge bg-primary">C#</span>
-        <span class="badge bg-secondary">PHP</span>
-        <span class="badge bg-success">Python</span>
-        <span class="badge bg-warning text-dark">JavaScript</span>
-        <span class="badge bg-info text-dark">ReactJS</span>
-        <span class="badge bg-dark text-light">HTML & CSS</span>
-        <span class="badge bg-danger">GitHub</span>
-        <span class="badge bg-danger">Docker</span>
+      <div class="technologies m-3">
+        <span class="badge"> <img class="w-10"  src="img/technologies/bootstrap.png" alt="" /></span>
+        <span class="badge"> <img class="w-10"  src="img/technologies/CSharp.png" alt="" /></span>
+        <span class="badge"> <img class="w-10"  src="img/technologies/css.png" alt="" /></span>
+        <span class="badge"> <img class="w-10"  src="img/technologies/docker.png" alt="" /></span>
+        <span class="badge"> <img class="w-10"  src="img/technologies/dotnet.png" alt="" /></span>
+        <span class="badge"> <img class="w-10"  src="img/technologies/git.png" alt="" /></span>
+        <span class="badge"> <img class="w-10"  src="img/technologies/github.png" alt="" /></span>
+        <span class="badge"> <img class="w-10"  src="img/technologies/html.png" alt="" /> </span>
+        <span class="badge"> <img class="w-10"  src="img/technologies/jquery.png" alt="" /> </span>
+        <span class="badge"> <img class="w-10"  src="img/technologies/maui.png" alt="" /> </span>
+        <span class="badge"> <img class="w-10"  src="img/technologies/mysql.png" alt="" /></span>
+        <span class="badge"> <img class="w-10"  src="img/technologies/nodejs.png" alt="" /></span>
+        <span class="badge"> <img class="w-10"  src="img/technologies/php.png" alt="" /></span>
+        <span class="badge"> <img class="w-10"  src="img/technologies/python.png" alt="" /></span>
+        <span class="badge"> <img class="w-10"  src="img/technologies/react.png" alt="" /></span>
+        <span class="badge"> <img class="w-10"  src="img/technologies/xamarin.png" alt="" /></span>
       </div>
     </div>
 
