meta icon added

--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="keywords" content="hire, software, developer, engineer">    
-    <meta name="description" content="Hello! I'm Maphangwa Tshifhiwa based in South Africa. I'm a software developer">
+    <meta name="keywords" content="hire, software, developer, engineer, c#, dotnet, web, mobile, application,
+    software development, solution architect, project planning, business development, technology, software solutions,">    
+    <meta name="description" content="Hello! I'm Maphangwa Tshifhiwa based in South Africa. 
+    I'm a software developer">
+
+    <meta name="author" content="Maphangwa Tshifhiwa">
+    <meta name="robots" content="index, follow">
+    <meta name="theme-color" content="#ffffff">
+
+    <link rel="icon" href="img/favicon.ico" type="img/profile.jpg">
+    <link rel="apple-touch-icon" href="img/profile.jpg">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
       rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
