clinic portl url

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         <div class="m-3">
           <h4 class="">Health Care management System</h4>
-          <p class="">Check out <a href="http://clinicpotal.runasp.net/">clinicPotal</a> System, it help health practioners to manage patients information easly.</p>
+          <p class="">Check out <a href="http://clinicpotal.co.za/">clinicPotal</a> System, it help health practioners to manage patients information easly.</p>
         </div>
 
         <div class="m-3">
